<resources>
    <string name="app_name">Groove</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="last_added">Last added</string>
    <string name="Shuffle">Shuffle</string>
    <string name="most_played">Most played</string>
    <string name="add_to_playlist">Add to Playlist</string>
</resources>