<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.bottom_nav.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/top_app_bar_menu"
            app:title="@string/home" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/headerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_account" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textview_secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Welcome"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="User Name"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerLinearLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvHistory"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginEnd="12dp"
                        app:cardElevation="0dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/accent_30">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingHorizontal="8dp"
                            android:gravity="center_vertical"
                            style="@style/textview_secondary"
                            android:text="@string/history"
                            android:drawablePadding="16dp"
                            app:drawableStartCompat="@drawable/ic_history" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvLastAdded"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/accent_30">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingHorizontal="8dp"
                            android:gravity="center_vertical"
                            style="@style/textview_secondary"
                            android:text="@string/last_added"
                            android:drawablePadding="16dp"
                            app:drawableStartCompat="@drawable/ic_last_added" />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvMostPlayed"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginEnd="12dp"
                        app:cardElevation="0dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/accent_30">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingHorizontal="8dp"
                            android:gravity="center_vertical"
                            style="@style/textview_secondary"
                            android:text="@string/most_played"
                            android:drawablePadding="16dp"
                            app:drawableStartCompat="@drawable/ic_most_played"
                            app:drawableTint="@color/accent" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvShuffle"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/accent_30">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingHorizontal="8dp"
                            android:gravity="center_vertical"
                            style="@style/textview_secondary"
                            android:text="@string/Shuffle"
                            android:drawablePadding="16dp"
                            app:drawableStartCompat="@drawable/ic_shuffle"
                            app:drawableTint="@color/accent" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </LinearLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

